--- a/docs/templates_parser.texi
+++ b/docs/templates_parser.texi
@@ -1538,7 +1538,7 @@ procedure is defined as follow:
 
 @noindent
 One common usage is to handle tag variables that can be shared by
-many templates are not always used (because a conditional is False for
+many templates and are not always used (because a conditional is False for
 example). If computing the corresponding value (or values for a ...)
 is somewhat expensive it is better to delay building such tag at the
 point it is needed. Using a @code{Lazy_Tag} object it is possible to do
@@ -1546,7 +1546,13 @@ so. The @code{Value} procedure will be called if the tag value is
 needed. At this point, one can just add the corresponding association
 into the @code{Translate_Set}. Note that it is possible to add more
 than one association. If the association for @code{Var_Name} is not
-given this tag has no value.
+given, this tag has no value.
+
+@code{Value} will be called only once per template. This is so that if the
+value for the tag is expensive to compute, you only pay the price once, and
+the value is then cached for the remaining of the template. If the value
+should be recomputed every time, you should consider using a @code{Cursor_Tag}
+instead (@pxref{Cursor_Tag}).
 
 @node Cursor_Tag
 @subsection Cursor_Tag
@@ -1608,6 +1614,10 @@ routines to save a @code{Translation_Set} into an XML document or to
 create a @code{Translation_Set} by loading an XML document. The XML
 document must conform to a specific @code{DTD} (see the Ada spec file).
 
+@c --------------------------------------------------------------------------
+@c --  Templates2Ada
+@c --------------------------------------------------------------------------
+
 @node Templates2Ada
 @section Templates2Ada
 @cindex templates2ada
@@ -1616,17 +1626,163 @@ document must conform to a specific @code{DTD} (see the Ada spec file).
 @code{templates2ada} is a tool that will generate a set of Ada
 packages from a templates file. These Ada packages can then be used in
 your application to avoid hard-coded strings, and help maintain the
-templates and the code to parse them synchronized.
+templates and the code synchronized.
+
+One of its goal is to ensure that you are only setting tags that actually
+exist in the template (and thus prevent, as much as possibly, typos in the
+name of tags); also, when combined with other tools, to help ensure that all
+tags needed by the template are properly set.
+
+Templates2ada also has special knowledge about HTTP constructs
+and will generate Ada constants for the HTTP parameters you might receive in
+return. Once more the goal is to help avoid typos in the Ada code.
+
+For instance, we will consider a simple template file, found in a local
+file @file{resources/block1.thtml}. This template contains the following simple
+html code:
+
+@TPEXP{
+  <form>
+    <input name="PARAM1" value="@@_TAG1_@@" />
+    <input name="PARAM2" value="@@_TAG2_@@" />
+  </form>
+}
+
+When you run @file{templates2ada} (as described in the following subsection),
+the following Ada package will be generated. Note that this is only the
+default output of @file{templates2ada}, which can be fully tailored to your
+needs.
+
+@TPEXP{@b{package} Templates.Block1 @b{is}
+  pragma Style_Checks (Off);
+  Template : constant string := "resources/block1.thtml";
+  Tag1 : constant String := "TAG1";
+  Tag2 : constant String := "TAG2";
+  @b{package} Http @b{is}
+    Param1 : constant String := "PARAM1";
+    Param2 : constant String := "PARAM2";
+  @b{end} Http;
+@b{end} Templates.Block1;}
+
+@c --------------------------------------------------------------------------
+@c -- Templates2Ada -- Running templates2ada
+@c --------------------------------------------------------------------------
+
+@subsection Running templates2ada
+@noindent
+This tool parses all the template files found in a directory, and then
+generate an output file from these, based on a template file
+(a default example of which is provided as @file{templates.tads}). The
+latter contains in fact two examples, depending on whether one Ada
+package should be generated per template, or whether a single package
+should be build. In the former case, if you are using the GNAT compiler,
+you should run @code{gnatchop} on the resulting file. Here is an example
+to run this tool for the example we described above.
+
+@TPEXP{
+  rm -f src/templates/*.ads
+  templates2ada -d resources/ -o src/templates/generated -r
+  cd src/templates; gnatchop -w -q generated
+  rm -f src/templates/generated}
+
+If, in you Ada code, you no longer use hard-coded strings but only the
+constants found in the output packages, this will ensure that you are
+not trying to set tags that are never used in the template.
+
+The other check that impacts the quality of your code is to ensure that
+all tags that are used by the templates are properly set. This cannot be
+ensured by the compiler only, but using an external tool it is relatively
+to do.
+
+For instance, if you are using GNAT, we recommand the following additional
+targets in your @file{Makefile}:
+
+@TPEXP{
+  unset_tags:
+	gnat xref -u main.adb | fgrep templates-
+}
+
+This checks for all unused entities in files called @file{templates-*},
+which are the files generated by @file{templates2ada}.
+
+@file{templates2ada} can be used in other situations as well. For instance,
+one possible use is to generate, as output, a new template file that itself
+contains a series of @code{@@@@SET@@@@} commands. This generated file can
+then be @code{@@@@INCLUDE@@@@}d in your own templates. We haved used it with
+some success when implementation a web server: it is often the case that hyper
+links refer to other pages in the same server. We have avoided hard-coding the
+URLs and the names of their HTTP GET parameters, by fetching these names from
+the generated file we were talking above.
+
+The templates parser comes with an example file, called @file{all_urls.thtml},
+which can be used with the @code{-t} switch to @code{templates2ada}, and will
+generated a template file as output. You would use it as:
+
+@TPEXP{
+  @@@@INCLUDE@@@@ all_urls.html
+  <a href="@@_URI_BLOCK1_@@?@@_HTTP_BLOCK1__PARAM1_@@=12" />
+}
 
 @noindent
-@code{templates2ada} use a template file to generate the Ada packages
-(see the default @code{templates.tads}). Detailed documentation can be
-found in this template file. This file can also be tailored to fit
-your needs.
+and this ensures the link is valid.
 
+@file{templates2ada} supports a number of command line switches:
+
+@itemize @bullet
+@item -d <dir>
+
+This switch specifies the directory in which the templates file are
+searched for.
+
+@item -o <file>
+
+This switch specifies the output file name
+
+@item -e <ext>
+
+This file specifies the file name extension for template files. All
+files in the directory that have this extension will be processed by
+templates2ada.
+
+@item -t <tmplt>
+
+This file specifies the template file to be used for the output file.
+The templates parser comes with an example for such a file, called
+@file{templates.tads}, that you can adapt to your own needs.
+
+@item -r
+
+Subdirectories of the one specified by @code{-d} will also be searched.
+
+@item -v
+
+Activate the verbose mode. This will output a warning when an http
+parameter has a name made only of template parser tags, since no matching
+entry can then be created for it in the output file.
+
+@end itemize
+
+@c ---------------------------------------------------------------------------
+@c --  Templates2ada -- customizing
+@c ---------------------------------------------------------------------------
+
+@subsection Customizing templates2ada
 @noindent
-All templates with a specific extension (default .thtml) are parsed
-and used by the generator.
+
+As was mentioned before, the output of templates2ada is a single file that
+results from parsing a template file. An example of such a file is provided
+in the templates2ada distribution, as @file{templates.tads}.
+
+You are strongly encouraged to modify this file to adapt it to your needs,
+and then use the @code{-t} switch to @file{templates2ada} to make use of your
+modified file.
+
+This file contains exensive comments on how to make use, and customize, it.
+This documentation is not duplicated here
+
+@c ---------------------------------------------------------------------------
+@c --  Debug
+@c ---------------------------------------------------------------------------
 
 @node Debug
 @section Debug
