--- a/README
+++ b/README
@@ -2,16 +2,39 @@
 Templates_Parser
 ----------------
 
-To build:
+Some make variables can be adjusted to change the default setup:
 
-   $ make setup build
+   DEFAULT_LIBRARY_TYPE=[static|relocatable]
+        (default is static)
+
+   INSTALL=<install directory>
+        (default to compiler root directory)
+
+   ENABLE_SHARED=[true|false]
+	(default yes on platforms supporting shared libraries)
+
+To build both the static and shared version (if supported) using the
+default setup:
+
+   $ make
+
+To setup the default library as relocatable and change the installation
+directory:
+
+   $ make DEFAULT_LIBRARY_TYPE=relocatable INSTALL=/opt/templates_parser setup
+   $ make
 
 To install:
 
    $ make install
 
-Note that the installation will be done into your current GNAT root directory.
-It is possible to change this default by setting the INSTALL make variable,
-for example:
+Note that the installation will be done into your current GNAT root
+directory by default. It is possible to change this default by setting the
+INSTALL make variable, for example:
 
    $ make INSTALL=/opt/templates_parser install
+
+or using the setup step:
+
+   $ make INSTALL=/opt/templates_parser setup
+   $ make && make install
