Add note about include's filename limitation.
An include filename can't be a full pathname for security
reasons.
--
Part of H724-006.

--- a/docs/templates_parser.texi
+++ b/docs/templates_parser.texi
@@ -1224,6 +1224,10 @@ include commands are identical:
 The file name can also be a tag. In this case the file loading is deferred at
 the parsing time.
 
+@noindent
+For security reasons the filename can't be a full pathname. If a full
+pathname is passed then the leading directory separator is removed.
+
 @c -----------------------------------------------------------------------
 @node IF statement
 @section IF statement
