Fix support for building in release and debug mode.

--- a/README
+++ b/README
@@ -13,6 +13,9 @@ Some make variables can be adjusted to change the default setup:
    ENABLE_SHARED=[true|false]
 	(default yes on platforms supporting shared libraries)
 
+   DEBUG=[true|false]
+        (default false)
+
 To build both the static and shared version (if supported) using the
 default setup:
 
